# calibre-web

./: pyproject.toml
cps/templates/: read.html
