[tool.poetry]
name = "calibreweb"
version = "0.1.0"
description = "📚 Web app for browsing, reading and downloading eBooks stored in a Calibre database"
authors = []
packages = [
    {include = "cps"}
]

[tool.poetry.dependencies]
python = "^3.10"
APScheduler = ">=3.6.3,<3.10.0"
Werkzeug = "<2.1.0"
Babel = ">=1.3,<3.0"
Flask-Babel = ">=0.11.1,<2.1.0"
Flask-Login = ">=0.3.2,<0.6.2"
Flask-Principal = ">=0.3.2,<0.5.1"
backports_abc = ">=0.4"
Flask = ">=1.0.2,<2.1.0"
iso-639 = ">=0.4.5,<0.5.0"
PyPDF3 = ">=1.0.0,<1.0.7"
pytz = ">=2016.10"
requests = ">=2.11.1,<2.28.0"
SQLAlchemy = ">=1.3.0,<1.5.0"
tornado = ">=4.1,<6.2"
Wand = ">=0.4.4,<0.7.0"
Unidecode = ">=0.04.19,<1.4.0"
lxml = ">=3.8.0,<4.9.0"
Flask-WTF = ">=0.14.2,<1.1.0"
chardet = ">=3.0.0,<4.1.0"
advocate = ">=1.0.0,<1.1.0"
# google-api-python-client = {version = ">=1.7.11,<2.50.0", optional = true}
# gevent = {version = ">20.6.0,<22.0.0", optional = true}
# greenlet = {version = ">=0.4.17,<1.2.0", optional = true}
# httplib2 = {version = ">=0.9.2,<0.21.0", optional = true}
# oauth2client = {version = ">=4.0.0,<4.1.4", optional = true}
# uritemplate = {version = ">=3.0.0,<4.2.0", optional = true}
# pyasn1-modules = {version = ">=0.0.8,<0.3.0", optional = true}
# pyasn1 = {version = ">=0.1.9,<0.5.0", optional = true}
# PyDrive2 = {version = ">=1.3.1,<1.11.0", optional = true}
# PyYAML = {version = ">=3.12", optional = true}
# rsa = {version = ">=3.4.2,<4.9.0", optional = true}
# google-auth-oauthlib = {version = ">=0.4.3,<0.6.0", optional = true}
# Goodreads = {version = ">=0.3.2,<0.4.0", optional = true}
# python-Levenshtein = {version = ">=0.12.0,<0.13.0", optional = true}
# python-ldap = {version = ">=3.0.0,<3.5.0", optional = true}
# Flask-SimpleLDAP = {version = ">=1.4.0,<1.5.0", optional = true}
# Flask-Dance = {version = ">=2.0.0,<5.2.0", optional = true}
# SQLAlchemy-Utils = {version = ">=0.33.5,<0.39.0", optional = true}
# rarfile = {version = ">=3.2", optional = true}
# scholarly = {version = ">=1.2.0,<1.7", optional = true}
# markdown2 = {version = ">=2.0.0,<2.5.0", optional = true}
# html2text = {version = ">=2020.1.16,<2022.1.1", optional = true}
# python-dateutil = {version = ">=2.1,<2.9.0", optional = true}
# beautifulsoup4 = {version = ">=4.0.1,<4.11.0", optional = true}
# cchardet = {version = ">=2.0.0,<2.2.0", optional = true}
# natsort = {version = ">=2.2.0,<8.2.0", optional = true}
# comicapi = {version = ">=2.2.0,<2.3.0", optional = true}
# jsonschema = {version = ">=3.2.0,<4.7.0", optional = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
